src/fhiclcpp/fhiclcpp/test/testFiles/pass/table_pass.fcl
#===========================================
# Testing Table Syntax
#===========================================

tab1:{ a : 5 b : 6 c : 7 }
tab2 : { a:5 b:6 c:7 }
tab3: { a:5 b:6 c:7 }
tab4 :{ a:5 b:6 c:7 }
